--- a/captcha/templates/captcha/widget.html
+++ b/captcha/templates/captcha/widget.html
@@ -1,16 +1,23 @@
-<script type="text/javascript">
-    var DjangoRecaptchaOptions = {{options}};
-    if (typeof RecaptchaOptions !== 'object') {
-        RecaptchaOptions = DjangoRecaptchaOptions;
-    } else {
-        for (key in DjangoRecaptchaOptions) {
-            RecaptchaOptions[key] = DjangoRecaptchaOptions[key];
-        }
-    }
-</script>
-<script type="text/javascript" src="{{api_server}}/challenge?k={{ public_key }}&hl={{ lang }}"></script>
+<script src="https://www.google.com/recaptcha/api.js{% if lang %}?hl={{ lang }}{% endif %}"></script>
+<div class="g-recaptcha" data-sitekey="{{ public_key }}" {% for option,value in widget.attrs.items %}data-{{ option }}="{{ value }}" {% endfor %}></div>
 <noscript>
-  <iframe src="{{ api_server }}/noscript?k={{ public_key }}&hl={{ lang }}" height="300" width="500" frameborder="0"></iframe><br />
-  <textarea name="recaptcha_challenge_field" rows="3" cols="40"></textarea>
-  <input type='hidden' name='recaptcha_response_field' value='manual_challenge' />
+  <div style="width: 302px; height: 352px;">
+    <div style="width: 302px; height: 352px; position: relative;">
+      <div style="width: 302px; height: 352px; position: absolute;">
+        <iframe src="https://www.google.com/recaptcha/api/fallback?k={{ public_key }}"
+                frameborder="0" scrolling="no"
+                style="width: 302px; height:352px; border-style: none;">
+        </iframe>
+      </div>
+      <div style="width: 250px; height: 80px; position: absolute; border-style: none;
+                  bottom: 21px; left: 25px; margin: 0px; padding: 0px; right: 25px;">
+        <textarea id="g-recaptcha-response" name="g-recaptcha-response"
+                  class="recaptcha_challenge_field"
+                  style="width: 250px; height: 80px; border: 1px solid #c1c1c1;
+                         margin: 0px; padding: 0px; resize: none;" value="">
+        </textarea>
+        <input type="hidden" name="recaptcha_response_field" value="manual_challenge" />
+      </div>
+    </div>
+  </div>
 </noscript>
